--- a/Generador-Frases/css/style.css
+++ b/Generador-Frases/css/style.css
@@ -61,6 +61,9 @@ a:hover{
     a{
         font-size: 14px;
     }
+    .buttons-social{
+        font-size: 18px;
+    }
 }
 
 @media (min-width: 769px) { 
